// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CircleIndicator with color blue 1`] = `
<div
  className="CircleIndicator"
  style={
    Object {
      "border": "solid 2pxblue",
    }
  }
/>
`;

exports[`renders CircleIndicator with color red 1`] = `
<div
  className="CircleIndicator"
  style={
    Object {
      "border": "solid 2pxred",
    }
  }
/>
`;
